--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex; /* */
+  justify-content: space-between;
+  margin-right: auto;
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +24,10 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  display: flex;
+  justify-self: flex-end;
+  align-self: center;
+
 }
 
 .logo {
@@ -27,6 +35,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  display: flex;
+  align-self: center;
 }
 
 button {
@@ -35,6 +45,10 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  display: flex;
+  justify-self: flex-end;
+  align-self: center;
+  gap: 3em;
 }
 
 a {
@@ -45,4 +59,14 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  justify-content: flex-start;
+  gap: 1em;
+}
+
+.notif-prof {
+  display: flex;
+  justify-content: space-between;
+  margin-left: auto;
+  gap: 1em;
 }
