--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 img {
+  outline: solid #000000 1px;
   width: 100px;
   height: 100px;
 }
@@ -10,6 +11,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +26,25 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.image-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  height: 90px;
+  gap: 1em;
+  padding: 50px;
+  margin: 20px;
+}
+
+.text {
+  outline: solid #000 1px;
+  height: 160px;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  gap: 1em;
+  margin-right: 100px;
+
 }
